--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.14.0
   cloud_firestore: ^4.8.3
+  dots_indicator: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,17 @@ flutter:
     - assets/DB/box1/
     - assets/icons/
     - assets/images/
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/font/Roboto-Regular.ttf
+          weight: 400
+        - asset: assets/font/Roboto-Medium.ttf
+          weight: 500
+        - asset: assets/font/Roboto-Bold.ttf
+          weight: 700
+        - asset: assets/font/Roboto-Black.ttf
+          weight: 900
     #- asstes/storage_files
   #assets:
     #- assets/DB/papers/
