--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: foundationapp
 description: A new Flutter project.
+
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -38,6 +39,9 @@ dependencies:
   firebase_core: ^2.14.0
   cloud_firestore: ^4.8.3
   dots_indicator: ^2.0.0
+  google_fonts: ^5.1.0
+  firebase_storage: ^11.2.6
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +59,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -68,6 +73,7 @@ flutter:
     - assets/DB/box1/
     - assets/icons/
     - assets/images/
+
   fonts:
     - family: Roboto
       fonts:
@@ -79,6 +85,10 @@ flutter:
           weight: 700
         - asset: assets/font/Roboto-Black.ttf
           weight: 900
+
+    - family: CustomIcons
+      fonts:
+        - asset: assets/font/CustomIcons.ttf
     #- asstes/storage_files
   #assets:
     #- assets/DB/papers/
